daemon/macros/tests/ui/named_fields.rs
use ozmux_macros::NewType;

#[derive(NewType)]
struct NamedFields {
    inner: String,
}

fn main() {}
